# tap-capsulecrm

./: README.md  meltano.yml  pyproject.toml  tox.ini
tap_capsulecrm/: __main__.py  auth.py  client.py  streams.py  tap.py
tap_capsulecrm/tests/: __init__.py  test_core.py
