[tool.poetry]
name = "tap-capsulecrm"
version = "0.5.1"
description = "`tap-capsulecrm` is a Singer tap for Capsulecrm, built with the Meltano SDK for Singer Taps."
authors = ["Hotglue"]
keywords = [
    "ELT",
    "Capsulecrm",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
singer-sdk = "^0.44.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
tox = "^4.24.1"
flake8 = "^7.1.1"
black = "^25.1"
pydocstyle = "^6.1.1"
mypy = "^1.15"
types-requests = "^2.32.0"
isort = "^6.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_capsulecrm"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-capsulecrm = 'tap_capsulecrm.tap:TapCapsulecrm.cli'
