[tool.poetry]
name = "tap-capsulecrm"
version = "0.5.1"
description = "`tap-capsulecrm` is a Singer tap for Capsulecrm, built with the Meltano SDK for Singer Taps."
authors = ["Hotglue"]
keywords = [
    "ELT",
    "Capsulecrm",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.4"
singer-sdk = "^0.47.1"

[tool.poetry.dev-dependencies]
pytest = "^8.4.0"
tox = "^4.27.0"
flake8 = "^7.2.0"
black = "^25.1"
pydocstyle = "^6.1.1"
mypy = "^1.16"
types-requests = "^2.32.4"
isort = "^6.0.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_capsulecrm"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-capsulecrm = 'tap_capsulecrm.tap:TapCapsulecrm.cli'
